--- a/css/styles.css
+++ b/css/styles.css
@@ -51,9 +51,8 @@ body {
   background-color: #ffffff;
 }
 .container {
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+  max-width: 428px;
+  padding: 0 16px;
 }
 
 /* -------- HEADER -------- */
@@ -64,18 +63,14 @@ body {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .page-nav {
-  display: flex;
-  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 22px;
 }
 
 .logo {
+  display: flex;
+  align-items: center;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -84,7 +79,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-right: 76px;
 }
 
 .logo-studio {
@@ -92,9 +86,7 @@ body {
 }
 
 .nav-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+  display: none;
 }
 
 .nav-item {
@@ -132,9 +124,7 @@ body {
 }
 
 .address-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+  display: none;
 }
 
 .address-link {
