--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,20 @@ body {
   color: #434455;
   background-color: #ffffff;
 }
+
 .container {
-  max-width: 428px;
-  padding: 0 16px;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 /* -------- HEADER -------- */
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
@@ -86,11 +94,12 @@ body {
 }
 
 .nav-list {
-  display: none;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .nav-item {
-  position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -121,10 +130,6 @@ body {
 .nav-link:hover,
 .nav-link:focus {
   color: var(--accent-color);
-}
-
-.address-list {
-  display: none;
 }
 
 .address-link {
