--- a/css/media.css
+++ b/css/media.css
@@ -29,6 +29,16 @@
   }
 }
 
+@media screen and (max-width: 427px) {
+  .mob-menu-phone-link {
+    font-size: 26px;
+  }
+
+  .mob-menu-social-list {
+    gap: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -43,6 +53,10 @@
   }
 
   .mob-menu-open {
+    display: none;
+  }
+
+  .mobile-menu {
     display: none;
   }
 
@@ -67,5 +81,15 @@
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+  }
+
+  .logo {
+    margin-right: 76px;
   }
 }
