--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ body {
   gap: 40px;
 }
 .nav-item {
+  position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -137,6 +138,98 @@ body {
 .address-link:hover,
 .address-link:focus {
   color: var(--accent-color);
+}
+
+/* ------ Mobile MENU ------ */
+
+.mobile-menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  padding: 40px;
+  background-color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 40px;
+  position: absolute;
+  width: 151px;
+  height: 200px;
+  left: 40px;
+  top: 80px;
+}
+
+.mob-menu-item {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.mob-menu-item:hover,
+.mob-menu-item:focus {
+  color: #404bbf;
+}
+
+.mob-menu-wrap {
+  position: absolute;
+  bottom: 40px;
+  left: 40px;
+}
+
+.mob-menu-contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  margin-bottom: 48px;
+}
+
+.mob-menu-phone-link {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #4d5ae5;
+}
+
+.mob-menu-email-link {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mob-menu-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 56px;
 }
 
 /* -------- HERO -------- */
@@ -677,7 +770,8 @@ body {
   transform: translate(-50%, -50%) scale(0);
 }
 
-.modal-close-btn {
+.modal-close-btn,
+.mob-menu-close-btn {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -694,12 +788,20 @@ body {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn-icon {
+.modal-close-btn-icon,
+.mob-menu-close-btn {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
+  background-color: var(--accent-color);
+  border: none;
+  fill: #ffffff;
+}
+
+.mob-menu-close-btn:hover,
+.mob-menu-close-btn:focus {
   background-color: var(--accent-color);
   border: none;
   fill: #ffffff;
