--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,18 @@ body {
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/bg@2x.jpg");
+  }
+}
+
 .hero-container {
   display: flex;
   align-items: center;
@@ -257,8 +269,8 @@ body {
 
 .hero-title {
   font-size: 56px;
+  font-weight: 700;
   max-width: 496px;
-  height: 120px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
