--- a/css/media.css
+++ b/css/media.css
@@ -96,6 +96,19 @@
   .feature-text {
     font-weight: 500;
   }
+
+  .section-two {
+    display: none;
+  }
+
+  .team-container {
+    max-width: 296px;
+  }
+
+  .team-list {
+    flex-direction: column;
+    gap: 72px;
+  }
 }
 
 @media screen and (max-width: 427px) {
@@ -217,6 +230,19 @@
 
   .feature-text {
     font-weight: 500;
+  }
+
+  .section-two {
+    display: none;
+  }
+
+  .team-container {
+    max-width: 584px;
+  }
+
+  .team-list {
+    flex-wrap: wrap;
+    gap: 64px 24px;
   }
 }
 
