--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ body {
   top: 80px;
 }
 
-.mob-menu-item {
+.mob-menu-link {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
@@ -185,10 +185,11 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mob-menu-item:hover,
-.mob-menu-item:focus {
+.mob-menu-link:hover,
+.mob-menu-link:focus {
   color: #404bbf;
 }
 
@@ -213,7 +214,13 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #4d5ae5;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-pnone-link:hover,
+.mob-menu-phone-link:focus {
+  color: #404bbf;
 }
 
 .mob-menu-email-link {
@@ -223,6 +230,12 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-email-link:hover,
+.mob-menu-email-link:focus {
+  color: #404bbf;
 }
 
 .mob-menu-social-list {
