--- a/css/styles.css
+++ b/css/styles.css
@@ -692,10 +692,6 @@ body {
 .social-media-link:focus {
   background-color: #31d0aa;
 }
-.subscribe-wrap {
-  width: 453px;
-  height: 80px;
-}
 
 .subscribe-text {
   font-family: "Roboto", sans-serif;
@@ -713,10 +709,10 @@ body {
 }
 
 .subscribe-input {
-  width: 264px;
-  height: 40px;
   display: flex;
   align-items: center;
+  width: 264px;
+  height: 40px;
   font-family: "Roboto", sans-serif;
   font-size: 12px;
   line-height: 1.5;
@@ -726,7 +722,6 @@ body {
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
   background-color: transparent;
 }
 
@@ -974,7 +969,7 @@ body {
   font-family: "Roboto", sans-serif;
   min-width: 169px;
   height: 56px;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -985,4 +980,9 @@ body {
   border: none;
   padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+  background-color: var(--accent-color);
 }
